# ai-upp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODESTYLE.md  CURRENT_TASK.md  GEMINI.md  HIERARCHY.md  INVESTIGATION_toolsystem.md  NESO_EVENT_PATTERN.md  Overviewer.json  QWEN.md  QWEN_TCP_STATUS.md  README.md  STD_SRC_CTRLCORE_IMPLEMENTATION.md  TASKS.md  THREAD_DEPENDENCIES.md  TheoremProverCtrl.ugui  animedit.md  bot_test.html  build_ide.sh  build_upptst.sh  build_upptst_eon.sh  crash  dbg  debug-cmp1.txt  debug-cmp2.txt  debug_note.txt  dump_ui.py  find_missing_core.sh  loader-test-output.txt  missing_core_files.txt  page_source.html  plan  requirements-windows.bat  rmlist  test_cmd.json  test_core_editor.cpp  test_editor_commands.sh  test_facebook.py  (+31 more)
Book/: 001 - Orientation.md  002 - Chronicle Charter.md  003 - Format Shift.md  AGENTS.md  Animated GIFs and the QTF Designer.md  Assist++ Refactor and Editor Overhaul.md  BASE64 QTF and the Ref Refactor.md  Bicubic Rescaling and the 64-bit Debugger.md  Bulk Operations and Animated Clips.md  CURRENT_TASK.md  Chronicle Charter.md  Core Optimizations and Multipart Web Support.md  Core Sort Refactor and CAD Foundations.md  ETag Caching and the Error-Aware IDE.md  Format Shift.md  GLDraw and the SDL2.0 Rainbow.md  GTK Maturity and the REST of Core.md  GTK Native Choosers and Cairo Graphics.md  GUI Locking and the NewDraw Nest.md  Grid Maturity and the Physics Plugin.md  Header-Footer Support and the RichEdit Floating Mode.md  Headless Draw and the NewDraw Merge.md  Headless Infrastructure and Parallel Builds.md  Headless Web and the Error-Aware IDE.md  JSON Integration and Managed C++ Support.md  Media Foundations and UI Refinement.md  Multithreading Foundations and SVG Integration.md  Multithreading Mastery and the Surface Extension.md  NanoStrings and the Default GTK Backend.md  Orientation.md  Outlook Automation and the SetLayout Evolution.md  Painter 2.0 and the ODBC Frontier.md  Persistent Tabs and the SQL Renaissance.md  Polymorphic XML and the Bazaar Revolution.md  Python Integration and include Assist.md  Rainbow Project and Scientific Foundations.md  SCGI Servers and the Cypher Modularization.md  SDL Integration and Robust PolyXML.md  SDraw Foundations and Printing Polish.md  SQL Introspection and the Thread-Safe Id.md  (+33 more)
doc/: AnimEdit_Export_Tutorial.md  ai-log.md
docs/: AnimEdit_Export_System_Documentation.md  CommandRegistry.md  EonApiEditor_Analysis.md  EonApiEditor_Changes.md  GENTOO-STYLE-USE-FLAGS-PLAN.md  RepoRules.md  Settings.md  ai_context.md  optional_eon_keywords.md  softaudio_hybrid_instrument_system.md  upstream_sync_workflow.md
examples/: MyGame.cpp  ShaderToyExample.cpp  ShaderToyExample.upp  TestEcsIntegration.cpp
gametst/: Gametst.cpp  collections_test.cpp  curves_test.cpp  gametst.upp  interpolation_test.cpp
metadata/: PLAYBOOKS.md  agents_v1.json  commands_v1.json  pkg_lint_baseline.json  playbooks_v1.json  strategies_v1.json  upstream_mapping.json  upstream_sync.json
obsolete/: GenerateCMakeFiles.sh
pseudocode_analysis/: crude_json.pseudo  crude_json_hpp.pseudo  imgui_bezier_math.pseudo  imgui_bezier_math_h.pseudo  imgui_bezier_math_hpp.pseudo  imgui_bezier_math_inl.pseudo  imgui_canvas.pseudo  imgui_canvas_hpp.pseudo  imgui_extra_math.pseudo  imgui_extra_math_h.pseudo  imgui_extra_math_hpp.pseudo  imgui_extra_math_inl.pseudo  imgui_node_editor.pseudo  imgui_node_editor_api.pseudo  imgui_node_editor_hpp.pseudo  imgui_node_editor_internal.pseudo  imgui_node_editor_internal_hpp.pseudo  imgui_node_editor_internal_inl.pseudo
roadmap/: GameEngine.md  PacketRouter.md  animedit.md  uppstd.md  uppts.md
script/: accounting_app_lifecycle.py  build-console.sh  build.py  build.sh  build_RainbowGame.sh  build_apigen.sh  build_gubo_demo.sh  build_ide.sh  build_node_editor.sh  build_qwenmanager.sh  build_reference.sh  build_stdsrc_reference.sh  build_upptst.sh  build_upptst_eon.sh  build_upptst_eon00.sh  build_upptst_eon01.sh  build_upptst_eon02.sh  build_upptst_eon03.sh  build_upptst_eon04.sh  build_upptst_eon05.sh  build_upptst_eon06.sh  build_upptst_eon07.sh  build_upptst_eon08.sh  build_upptst_eon_generic.sh  compare_render_math.py  drawing_app_lifecycle.py  final_clean_test.sh  (+26 more)
uppsrc/Eon/Win/: AGENTS.md  AppLogicSystem.h  AppView.cpp  AppView.h  CMakeLists.txt  CameraResources.cpp  CameraResources.h  CommonComponents.h  ControllerRendering.cpp  ControllerRendering.h  DemoRoomMain.cpp  DemoRoomMain.h  DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  EasingSystem.cpp  EasingSystem.h  Engine.h  EngineCommon.h  EngineTypeTraits.h  Entity.h  EntityPrefabs.h  EntityStore.cpp  EonWin.h  GltfHelper.cpp  GltfHelper.h  GltfLoader.cpp  GltfLoader.h  Haptics.h  HolographicRenderer.cpp  HolographicRenderer.h  HolographicScene.cpp  HolographicScene.h  HolographicScene_updated.cpp  ListenerCollection.h  MotionControllerSystem.cpp  MotionControllerSystem.h  PaintStrokeSystem.cpp  PaintStrokeSystem.h  PaintingSystem.cpp  (+46 more)
(+10690 files in other folders)
